# simple_ffmpeg_demo

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md
FFmpeg/include/libavutil/: ffversion.h
doc/: FFmpeg 关键结构体.md  FFmpeg 重要数据结构.md
doc/src_code_study/: avio_context.c
src/: CMakeLists.txt  mem_io_muxer.cpp  muxer.cpp  muxer_core.cpp  muxer_core.h
src/streamer/: CMakeLists.txt  main.cpp  udp_streaming.cpp
